# tappr

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: USAGE.md
hack/: README-base.md  generate_paperwork.sh  generate_readme.sh
tappr/: main.py
tappr/modules/artifacts/clusters/: gke_defaults.json  kind.yaml
tappr/modules/artifacts/profiles/: build-essential.yml  build-slim.yml  build.yml  full-scan.yml  full.yml  iterate-essentials.yml  iterate-local-essentials.yml  iterate-local.yml  iterate-scan.yml  iterate-slim.yml  iterate.yml  run-local.yml  run.yml  tap-values.yml  view.yml
tappr/modules/artifacts/rbac/: developer.yml
tappr/modules/artifacts/templates/: grype-values.yaml  scan-policy.yml  store_ca.yaml  store_secrets_export.yaml  tekton-gradle-test-pipeline.yml  test-pipeline.yml
tappr/modules/changelog/: changelog.py  changelog_format.md
tappr/modules/releasenotes/: release_notes.py
tappr/modules/releasenotes/templates/: tappr-release.md
tappr/modules/tanzu/: tap.py  tapgui.py
tappr/modules/test/: test_framework.py
tappr/modules/utils/: commit_parser.py  commons.py  constants.py  creds.py  enums.py  helpers.py  k8s.py  logger.py  ui.py
tests/: apps-plugin-tests.json  install-tanzu-cli.json  sample-workload.yml  service-bindings-test.json
